--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smt.gmail.com
 spring.mail.port=587
-spring.mail.username=pedro.trabalhos22@gmail.com
+spring.mail.username=eduvs68@gmail.com
 spring.mail.password=effl ilmp zilr vrqe
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
