--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.mail.host=smt.gmail.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=eduvs68@gmail.com
-spring.mail.password=effl ilmp zilr vrqe
+spring.mail.password=qbfm lxxy vhpr hlva
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
